--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <link rel="stylesheet" href="joseph.css">
+    </head>
+    <body>
+        <h1 class="Joe">Joseph Krueger</h1>
+        <h2 class="subtitle">Engineering for a modern World</h2>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
