--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
         <link rel="stylesheet" href="joseph.css">
     </head>
     <body>
-        <h1 class="Joe">Joseph Krueger</h1>
+        <div class="topbar">
+        <h1 id="top" class="Joe">Joseph Krueger</h1>
         <h2 class="subtitle">Engineering for a modern World</h2>
-        <p>I'm hosted with GitHub Pages.</p>
+        <div style="text-align: center"><a href="www.linkedin.com/in/joseph-krueger">www.linkedin.com/in/joseph-krueger</a></div>
+        <h3>
+            <ul class="nav">
+                <li><a href="#bio">Biography</a></li>
+                <li><a href="#news">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </h3>
+        <p id="bio">I'm hosted with GitHub Pages.</p>
+        <a href="#top">Jump to Top</a>
+        </div>
     </body>
 </html>
