--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1 id="top" class="Joe">Joseph Krueger</h1>
         <h2 class="subtitle">Engineering for a modern World</h2>
         <div style="text-align: center"><a href="https://www.linkedin.com/in/joseph-krueger">https://www.linkedin.com/in/joseph-krueger</a></div>
+        <div style="text-align: center">Email: jakrueger98@comcast.net</div>
         <h3>
             <ul class="nav">
                 <li><a href="#bio">Biography</a></li>
