--- a/index.html
+++ b/index.html
@@ -5,20 +5,39 @@
     </head>
     <body>
         <div class="topbar">
+        <div>
         <h1 id="top" class="Joe">Joseph Krueger</h1>
         <h2 class="subtitle">Engineering for a modern World</h2>
-        <div style="text-align: center"><a href="https://www.linkedin.com/in/joseph-krueger">https://www.linkedin.com/in/joseph-krueger</a></div>
-        <div style="text-align: center">Email: jakrueger98@comcast.net</div>
-        <h3>
+        <div class="linkedin"><a href="https://www.linkedin.com/in/joseph-krueger">https://www.linkedin.com/in/joseph-krueger</a></div>
+        <div class="email">Email: jakrueger98@comcast.net</div>
+            </div>
+            <h3>
             <ul class="nav">
                 <li><a href="#bio">Biography</a></li>
-                <li><a href="#news">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
         </h3>
-        <p id="bio">I'm hosted with GitHub Pages.</p>
-        <a href="#top">Jump to Top</a>
+        </div>
+    <div class="maincontent">
+    <div class="bio">
+        <h4>Biography</h4>
+        <p>This is my biography.
+        </p>
+        </div>
+    <div class="skills">
+        <h4>Skills</h4>
+        <p>These are my skills.
+        </p>
+        
+        </div>
+    <div class="contact">
+        <h4>Contact Me</h4>
+        <p>Contact info.
+        </p>
+        </div>
+    <a href="#top">Jump to Top</a>
         </div>
     </body>
 </html>
