--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </h3>
         </div>
     <div class="maincontent">
-    <div class="bio">
+    <div id="bio">
+        <img id="headshot" src="Headshot.JPG">
         <h4>Biography</h4>
         <p>This is my biography.
         </p>
