--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </h3>
         </div>
     <div class="maincontent">
-    <div id="bio">
+    <div id="bio" style="display: inline-block">
         <img id="headshot" src="Headshot.JPG">
         <h4>Biography</h4>
         <p>This is my biography.
