--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         <a href="#top">Jump to Top</a>
         <hr>
     <div id="skills">
-        
+        <embed type="pdf" id="resume" src="Joseph%20Krueger%20Resume.pdf">
         <h4>Skills</h4>
         <p>These are my skills.
         </p>
+        
         </div>
         <a href="#top">Jump to Top</a>
         <hr>
