--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Joseph Krueger</title>
         <link rel="shortcut icon" type="image/png"
               href="Favicon.png" >
         <meta charset="UTF-8">
