--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Joseph Krueger</title>
         <link rel="shortcut icon" type="image/png"
-              href="Favicon.png" >
+              href="Favicon2.png" >
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="joseph.css">
