--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="#About">About</a></li>
                 <li><a href="#skills"> Skills</a></li>
-                <li><a>Contact</a></li>
+                <li><a href="#Contact">Contact</a></li>
                 </ul>
         </span>
             </div>
@@ -47,6 +47,12 @@
             </object>
         </div>
 
+        <div class="Contact">
+        <span id="Contact">
+             <h2>Contact Me</h2>
+            </span>
+        </div>
+        
     </body>
     <footer>
     <address>
