--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              <h2>Contact Me</h2>
             </span>
             <ul>
-                <li>Phone Number: (717) 309 - 6104</li>
+                <li>Phone Number: (717) 309-6104</li>
                 <li>Email: <a href="mailto: jakrueger98@comcast.net"> Jakrueger98@comcast.net</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/joseph-krueger">https://www.linkedin.com/in/joseph-krueger</a></li>
                 </ul>
