--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <h2>About</h2>
             </span>
         <span class="bio">
-            I am a good boy
+            Joseph Krueger
             <img id="headshot" src="Headshot.JPG">
             </span>
         </div>
