--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <h2>About</h2>
             </span>
         <span class="bio">
-            Joseph Krueger
+            Joseph Krueger is an outstanding dude. - Nicholas Smith Phd
             <img id="headshot" src="Headshot.JPG">
             </span>
         </div>
@@ -41,7 +41,7 @@
         <span id="About">
             <h2>Skills</h2>
             </span>
-            I have these skills
+            I have always done what interests.
             <object type="application/pdf" data="Joseph%20Krueger%20Resume.pdf" id="pdf">
                 <p>This is my pdf download it <a href="Joseph%20Krueger%20Resume.pdf" download>here</a></p>
             </object>
