--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </span>
         <ul>
             <li>Phone Number: (717) 309-6104</li>
-            <li>Email: <a href="mailto: jakrueger98@comcast.net"> Jakrueger98@comcast.net</a></li>
+            <li>Email: <a href="mailto: jkruege4@villanova.edu"> Jkruege4@villanova.edu</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/joseph-krueger" target="_blank">https://www.linkedin.com/in/joseph-krueger</a></li>
         </ul>
     </div>
