Added Scroll up to Page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="top">
 
     </div>
     <div class="top">
@@ -31,7 +31,7 @@
 
     <div class="About">
         <span id="About">
-            <h2>About</h2>
+            <h2><a href="#top">About</a></h2>
         </span>
         <span class="bio">
             <img id="headshot" src="Headshot.JPG" alt="Picture of Joseph">
@@ -43,7 +43,7 @@
     <hr>
     <div class="Skills" id="skills">
         <span id="About">
-            <h2>Skills</h2>
+            <h2><a href="#top">Skills</a></h2>
         </span>
         <object type="application/pdf" data="Joseph%20Krueger%20Resume.pdf" id="pdf">
             <p>PDF display error. If you want my resume please download it <a href="Joseph%20Krueger%20Resume.pdf" download>here</a></p>
@@ -72,7 +72,7 @@
     <hr>
     <div class="Contact">
         <span id="Contact">
-            <h2>Contact Me</h2>
+            <h2><a href="#top">Contact Me</a></h2>
         </span>
         <ul>
             <li>Phone Number: (717) 309-6104</li>
