--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2><a href="#top">About</a></h2>
         </span>
         <span class="bio">
-            <img id="headshot" src="Headshot.JPG" alt="Picture of Joseph">
+            <img id="headshot" src="New Headshot close.png" alt="Picture of Joseph">
             <p>I was born in York PA in 1998 to John and Marie Krueger. Growing up my parents always knew that I would become an engineer and as I got older I found that building and fixing electronics, puzzles, and models was a passion. I attended Northeastern Senior High School and graduated magna cum laude in 2017. While I was there I was involved with the orchestra, cross country and track team, math club, Quiz Bowl/Brainbusters, and the Robotics team. In my personal time I served as a manager for a band, cinematographer and composer for an award-winning short film, and volunteered at my church.</p>
             <p>I am currently a Junior at the Villanova College of Engineering studying Mechanical Engineering with minors in Aerospace Engineering and Math. I am studying to achieve my goals of working in the aerospace industry and furthering the exploration of space.
             </p>
@@ -46,7 +46,7 @@
             <h2><a href="#top">Skills</a></h2>
         </span>
         <object type="application/pdf" data="Joseph%20Krueger%20Resume.pdf" id="pdf">
-            <p>PDF display error. If you want my resume please download it <a href="Joseph%20Krueger%20Resume.pdf" download>here</a></p>
+            <p align="center">PDF display error. If you want my resume please download it <a href="Joseph%20Krueger%20Resume.pdf" download>here</a></p>
         </object>
         <p>Because I have known what I want to do for a long time, I have made efforts to get involved with opportunities that I enjoy and benefit me professionally.</p>
         <p>In high school I was involved with several clubs that deal with math and engineering. One I was invested in was the robotics team, as first a member and then as the captain for my junior and senior years. We competed in several area VEX robotics competitions and placed in third at one of them.
