--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="#About">About</a></li>
                 <li><a href="#skills"> Skills</a></li>
+				<li><a href="#Projects">Projects</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
         </span>
@@ -45,8 +46,8 @@
         <span id="About">
             <h2><a href="#top">Skills</a></h2>
         </span>
-        <object type="application/pdf" data="Joseph%20Krueger%20Resume.pdf" id="pdf">
-            <p align="center">PDF display error. If you want my resume please download it <a href="Joseph%20Krueger%20Resume.pdf" download>here</a></p>
+        <object type="application/pdf" data="Joseph Krueger Resume 2020.pdf" id="pdf">
+            <p align="center">PDF display error. If you want my resume please download it <a href="Joseph Krueger Resume 2020.pdf" download>here</a></p>
         </object>
         <p>Because I have known what I want to do for a long time, I have made efforts to get involved with opportunities that I enjoy and benefit me professionally.</p>
         <p>In high school I was involved with several clubs that deal with math and engineering. One I was invested in was the robotics team, as first a member and then as the captain for my junior and senior years. We competed in several area VEX robotics competitions and placed in third at one of them.
@@ -68,6 +69,18 @@
 
         </p>
         <p style="text-align: center;text-indent: 0px">Thank You,<br>Joseph Krueger</p>
+    </div>
+	<hr>
+	<div class="About">
+        <span id="Projects">
+            <h2><a href="#top">Projects</a></h2>
+        </span>
+				<h3 align="center" id="title">Villanova Undergraduate Research Fellowship</h3>
+       	<span class="prog">
+            <img id="sym" src="Symposium.jpg" alt="Joseph Presenting at Research Symposium">
+            <p>Text Here
+            </p>
+        </span>
     </div>
     <hr>
     <div class="Contact">
