--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<h3 align="center" id="title">Villanova Undergraduate Research Fellowship</h3>
        	<span class="prog">
             <img id="sym" src="Symposium.jpg" alt="Joseph Presenting at Research Symposium">
-            <p>Text Here
+            <p>During the summer after sophomore year, I applied for a fellowship with VURF. Under the instruction of a faculty mentor, I learned theory, participated in research, and ultimately presented my findings at a symposium at the beginning of junior year.
             </p>
         </span>
     </div>
