--- a/index.html
+++ b/index.html
@@ -194,12 +194,16 @@
                     <p>My Resume</p>
                     
                 </div>
-                <div class="row">
+                <!--<div class="row">
                 	<object type="application/pdf" data="Joseph Krueger Resume 2021.pdf" id="pdf">
             <p align="center">PDF display error. If you want my resume please download it <a href="Joseph Krueger Resume 2020.pdf" download>here</a></p>
-        </object>    
+        </object>   
                 
-                </div>
+                </div>--> 
+				<iframe src="Joseph Krueger Resume 2021.pdf" width="100vw" height="100vh">
+					<p align="center">PDF display error. If you want my resume please download it <a href="Joseph Krueger Resume 2020.pdf" download>here</a></p>
+    			</iframe>
+			
             </div>
         </div>
         <!-- Portfolio End -->   
