--- a/index.html
+++ b/index.html
@@ -200,9 +200,7 @@
         </object>   
                 
                 </div>--> 
-				<iframe src="Joseph Krueger Resume 2021.pdf" width="100vw" height="100vh">
-					<p align="center">PDF display error. If you want my resume please download it <a href="Joseph Krueger Resume 2020.pdf" download>here</a></p>
-    			</iframe>
+				<embed src="Joseph Krueger Resume 2021.pdf" />
 			
             </div>
         </div>
