--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
         </object>   
                 
                 </div>--> 
-				<embed src="Joseph Krueger Resume 2021.pdf" />
+				<iframe src="Joseph Krueger Resume 2021.pdf" title="Joseph Krueger Resume" align="top" height="620" width="100%" frameborder="0" scrolling="auto" target="Message">
+<!-- Alternate content for non supporting browsers -->
+<p align="center">Please click <a href="Joseph Krueger Resume 2021.pdf">here </a> to download.</p>
+				</iframe>
 			
             </div>
         </div>
@@ -263,7 +266,8 @@
                         <h3>Villanova, PA 19085</h3>
                         <div class="footer-menu">
                             <p>+01 (717) 309-6104</p>
-                            <p>jakrueger98@comcast.net</p><p><a href="https://www.linkedin.com/in/joseph-krueger" class="footer-social">LinkedIn</a></p>
+                            <p>jakrueger98@comcast.net</p>
+							<p>www.linkedin.com/in/joseph-krueger</p>
                         </div>
                  
                     </div>
