--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </object>   
                 
                 </div>--> 
-				<iframe src="Joseph Krueger Resume 2021.pdf" title="Joseph Krueger Resume" align="top" height="620" width="100%" frameborder="0" scrolling="auto" target="Message">
+				<iframe src="Joseph Krueger Resume 2021.pdf" title="Joseph Krueger Resume" align="top" height="840" width="100%" frameborder="0" scrolling="auto" target="Message">
 <!-- Alternate content for non supporting browsers -->
 <p align="center">Please click <a href="Joseph Krueger Resume 2021.pdf">here </a> to download.</p>
 				</iframe>
@@ -267,7 +267,7 @@
                         <div class="footer-menu">
                             <p>+01 (717) 309-6104</p>
                             <p>jakrueger98@comcast.net</p>
-							<p>www.linkedin.com/in/joseph-krueger</p>
+							<p><a href="www.linkedin.com/in/joseph-krueger">LinkedIn</a></p>
                         </div>
                  
                     </div>
