--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>My Resume</p>
-                    
+                    <h2>View and Download</h2>
                 </div>
                 <!--<div class="row">
                 	<object type="application/pdf" data="Joseph Krueger Resume 2021.pdf" id="pdf">
@@ -200,7 +200,7 @@
         </object>   
                 
                 </div>--> 
-				<iframe src="Joseph Krueger Resume 2021.pdf" title="Joseph Krueger Resume" align="top" height="840" width="100%" frameborder="0" scrolling="auto" target="Message">
+				<iframe src="Joseph Krueger Resume 2021.pdf" title="Joseph Krueger Resume" align="top" height="1000" width="100%" frameborder="0" scrolling="auto" target="Message">
 <!-- Alternate content for non supporting browsers -->
 <p align="center">Please click <a href="Joseph Krueger Resume 2021.pdf">here </a> to download.</p>
 				</iframe>
