--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <div class="footer-menu">
                             <p>+01 (717) 309-6104</p>
                             <p>jakrueger98@comcast.net</p>
-							<p><a href="www.linkedin.com/in/joseph-krueger">LinkedIn</a></p>
+							<p><a href="https://www.linkedin.com/in/joseph-krueger" target="_blank">LinkedIn</a></p>
                         </div>
                  
                     </div>
