--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">Joseph Krueger</a>
+                <a href="#home" class="navbar-brand">Joseph Krueger</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -247,7 +247,7 @@
                                 <p>
                                     This issue of the biannual Villanova Engineer magazine is dedicated to "Research Reimagined" and features stories from each of the College's 15 newly identified research "neighborhoods."
                                 </p>
-                                <a class="btn" href="">Read More <i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="https://issuu.com/villanovaengineer/docs/g46942_exx3322021_villanova_engineer_spring_final">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
