--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                 <p>
                                     Sixteen undergraduate and graduate team finalists will proceed to the next phase of NASA’s Revolutionary Aerospace Systems Concepts – Academic Linkage (RASC-AL) program, with the clock now ticking toward June’s virtual 2021 RASC-AL Forum, where teams will showcase their completed work in a competitive design review directly to NASA and aerospace industry leaders.
                                 </p>
-                                <a class="btn" href="https://www.nasa.gov/feature/nasa-selects-16-university-teams-to-develop-deep-space-mission-concepts">Read More <i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="https://www.nasa.gov/feature/nasa-selects-16-university-teams-to-develop-deep-space-mission-concepts" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +247,7 @@
                                 <p>
                                     This issue of the biannual Villanova Engineer magazine is dedicated to "Research Reimagined" and features stories from each of the College's 15 newly identified research "neighborhoods."
                                 </p>
-                                <a class="btn" href="https://issuu.com/villanovaengineer/docs/g46942_exx3322021_villanova_engineer_spring_final">Read More <i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="https://issuu.com/villanovaengineer/docs/g46942_exx3322021_villanova_engineer_spring_final" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
