--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <!-- Favicon -->
-        <link href="img/Favi2.png" rel="icon">
+        <link href="img/Favi.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -90,10 +90,10 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Hello! I am Joseph Krueger, an Aerospace Master's Student at the Techincal University of Delft, Netherlands.  
+                                    Hello! I am Joseph Krueger, an Mechanical Engineering graduate of Villanova University.
                                 </p>
 								<p>
-                                    I have always loved to experience new things and learn how the world around me works. This passion has taken me from Villanova, to UPenn, and now to the Netherlands as I follow what I love to do.
+                                    I have always loved to experience new things and learn how the world around me works. This passion has taken me from Villanova, to UPenn, the Netherlands, and now onwards as I follow what I love to do.
                                 </p>
 								<p>
                                     In everything I do I continually look for creative, novel solutions that push the boundaries of what is possible now and explore the possibilities of the future.
@@ -202,7 +202,7 @@
                 </div>--> 
 				<iframe src="Joseph Krueger Resume 2022.pdf" title="Joseph Krueger Resume" align="top" height="1000" width="100%" frameborder="0" scrolling="auto" target="Message">
 <!-- Alternate content for non supporting browsers -->
-<p align="center">Please click <a href="Joseph Krueger Resume 2022.pdf">here </a> to download.</p>
+<p align="center">Please click <a href="Joseph Krueger Resume.pdf">here </a> to download.</p>
 				</iframe>
 			
             </div>
@@ -263,9 +263,8 @@
                 <div class="container">
                     <div class="footer-info">
                         <h2>Joseph Krueger</h2>
-                        <h3>Villanova, PA 19085</h3>
                         <div class="footer-menu">
-                            <p>+31 06 82 714 343</p>
+                            <p>+01 717 305 8769</p>
                             <p>jakrueger98@comcast.net</p>
 							<p><a href="https://www.linkedin.com/in/joseph-krueger" target="_blank">LinkedIn</a></p>
                         </div>
@@ -274,7 +273,7 @@
                 </div>
                 
 				<div class="container copyright">
-                     <p>Published February 2022</p> 
+                     <p>Published February 2024</p> 
                 </div> 
 				
             </div>
