Added Info to resume

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         </object>   
                 
                 </div>--> 
-				<iframe src="Joseph Krueger Resume.pdf" title="Joseph Krueger Resume" align="top" height="1000" width="100%" frameborder="0" scrolling="auto" target="Message">
+				<iframe src="Joseph Krueger Resume w Info.pdf" title="Joseph Krueger Resume" align="top" height="1000" width="100%" frameborder="0" scrolling="auto" target="Message">
 <!-- Alternate content for non supporting browsers -->
-<p align="center">Please click <a href="Joseph Krueger Resume.pdf">here </a> to download.</p>
+<p align="center">Please click <a href="Joseph Krueger Resume w Info.pdf">here </a> to download.</p>
 				</iframe>
 			
             </div>
